--- a/user_portal/.gitignore
+++ b/user_portal/.gitignore
@@ -1,5 +1,5 @@
 *.__pycache__
-settings.py
+settings
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 
