--- a/user_portal/.gitignore
+++ b/user_portal/.gitignore
@@ -114,7 +114,7 @@ __pypackages__/
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
-migrations/
+
 # SageMath parsed files
 *.sage.py
 
@@ -153,4 +153,4 @@ dmypy.json
 cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
-.requirements
+requirements.txt
