--- a/user_portal/.gitignore
+++ b/user_portal/.gitignore
@@ -153,4 +153,5 @@ dmypy.json
 cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
-requirements.txt
+# .requirements.txt
+.requirements
